<resources>
    <string name="app_name">Layout GeekApp</string>
    <string name="Its_time_to_code">Настало время кодить</string>
    <string name="welcome_paghe_description">Мы не просто учим программировать, мы выпускаем готовых специалистов!</string>
    <string name="log_in">Регистрация</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_with_google">Войти через GOOGLE</string>
    <string name="email">Email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="agreement_privacy_policy">Создавая аккаунт вы подтверждаете, что ознакомлены с Политикой конфиденциальности, и принимаете обозначенные в них условия.</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="privacy_policy_example">Your privacy is important to us. It is Brainstorming\'s policy to respect your privacy regarding any information we may collect from you across our website, and other sites we own and operate.
We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.
We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.
We don’t share any personally identifying information publicly or with third-parties, except when required to by law.
Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.
You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.
Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.
This policy is effective as of 5 November 2021.</string>
    <string name="privacy_policy">Политикa конфиденциальности</string>
    <string name="ie_more_details"><![CDATA[Подробнее >]]></string>
    <string name="il_android_development">Android Разяработка</string>
</resources>